crates/compiler/codegen/tests/snapshots/codegen_auto_discovery__all_fixtures_codegen@control_flow__for_with_breaks.cm.snap
---
source: crates/compiler/codegen/tests/codegen_auto_discovery.rs
description: Codegen snapshot for control_flow/for_with_breaks.cm
input_file: test_data/control_flow/for_with_breaks.cm
---
Fixture: control_flow/for_with_breaks.cm
============================================================
Source code:
fn test_for_with_breaks() -> felt {
    //!ASSERT FUNCTION_COUNT: 1

    let result = 0;

    for (let count = 0; count < 10; count = count + 1) {
        if (count == 5) {
            continue;
        }

        result = result + count;

        if (count == 8) {
            break;
        }
    }

    return result;
}
============================================================
Result: SEMANTIC ERRORS
Semantic errors found:
DiagnosticCollection {
    diagnostics: [
        Diagnostic {
            severity: Error,
            code: TypeMismatch,
            message: "Operator `<` is not supported for type `felt`",
            file_path: "control_flow/for_with_breaks.cm",
            span: 114..119,
            related_spans: [],
        },
    ],
}
