crates/compiler/codegen/tests/snapshots/codegen_auto_discovery__all_fixtures_codegen@control_flow__if_else.cm.snap
---
source: crates/compiler/codegen/tests/codegen_auto_discovery.rs
description: Codegen snapshot for control_flow/if_else.cm
input_file: test_data/control_flow/if_else.cm
---
Fixture: control_flow/if_else.cm
============================================================
Source code:
//!ASSERT BLOCK_COUNT(test): 4 // entry, then, else, merge

// Tests a standard `if-else` statement where both branches continue execution.
fn test(x: felt) -> felt {
    let a = 0;
    if (x == 10) {
        a = 1;
    } else {
        a = 2;
    }
    return a;
}

============================================================
Generated CASM:
test:
   0: 9 0 0 _              // [fp + 0] = 0
   1: 5 -4 10 1            // [fp + 1] = [fp + -4] op 10
   2: 14 1 3 _             // if [fp + 1] != 0 jmp rel test_2
test_1:
   3: 9 1 0 _              // Store immediate: [fp + 0] = 1
   4: 12 6 _ _             // jump abs test_3
test_2:
   5: 9 2 0 _              // Store immediate: [fp + 0] = 2
test_3:
   6: 4 0 0 -3             // Return value 0: [fp -3] = [fp + 0] + 0
   7: 11 _ _ _             // return
