crates/compiler/codegen/tests/snapshots/codegen_auto_discovery__all_fixtures_codegen@control_flow__if_else_with_merge.cm.snap
---
source: crates/compiler/codegen/tests/codegen_auto_discovery.rs
description: Codegen snapshot for control_flow/if_else_with_merge.cm
input_file: test_data/control_flow/if_else_with_merge.cm
---
Fixture: control_flow/if_else_with_merge.cm
============================================================
Source code:
fn test_if_else(x: felt) -> felt {
    let y = 0;
    if (x == 0) {
        y = 1;
    } else {
        y = 2;
    }
    return y;
}

============================================================
Generated CASM:
test_if_else:
test_if_else:
test_if_else_0:
   0: 9 0 0 _              // [fp + 0] = 0
   1: 14 -4 4 _            // if [fp + -4] != 0 jmp rel test_if_else_2
   2: 12 3 _ _             // jump abs test_if_else_1
test_if_else_1:
   3: 9 1 0 _              // Store immediate: [fp + 0] = 1
   4: 12 6 _ _             // jump abs test_if_else_3
test_if_else_2:
   5: 9 2 0 _              // Store immediate: [fp + 0] = 2
test_if_else_3:
   6: 4 0 0 -3             // Return value 0: [fp -3] = [fp + 0] + 0
   7: 11 _ _ _             // return
