crates/compiler/codegen/tests/snapshots/codegen_auto_discovery__all_fixtures_codegen@control_flow__if_partial_return.cm.snap
---
source: crates/compiler/codegen/tests/codegen_auto_discovery.rs
description: Codegen snapshot for control_flow/if_partial_return.cm
input_file: test_data/control_flow/if_partial_return.cm
---
Fixture: control_flow/if_partial_return.cm
============================================================
Source code:
//!ASSERT BLOCK_COUNT(test): 4 // entry, then, else, merge
//!ASSERT CONTAINS: return 30

// Tests an `if-else` where one branch returns and the other continues.
// This is a critical test for correct merge block generation.
fn test(x: felt) -> felt {
    if (x == 5) {
        return 10;
    } else {
        // This branch continues, so a merge block is required.
        let y = x + 1;
    }
    // This code must be reachable and generated in the merge block.
    return 30;
}

============================================================
Result: SEMANTIC ERRORS
Semantic errors found:
DiagnosticCollection {
    diagnostics: [
        Diagnostic {
            severity: Warning,
            code: UnusedVariable,
            message: "Unused variable 'y'",
            file_path: "control_flow/if_partial_return.cm",
            span: 378..379,
            related_spans: [],
        },
    ],
}
