crates/compiler/codegen/tests/snapshots/codegen_auto_discovery__all_fixtures_codegen@control_flow__infinite_loop.cm.snap
---
source: crates/compiler/codegen/tests/codegen_auto_discovery.rs
description: Codegen snapshot for control_flow/infinite_loop.cm
input_file: test_data/control_flow/infinite_loop.cm
---
Fixture: control_flow/infinite_loop.cm
============================================================
Source code:
fn test_infinite_loop() -> felt {
    let counter = 0;

    loop {
        counter = counter + 1;
        if (counter == 10) {
            break;
        }
    }

    return counter;
}

============================================================
Generated CASM:
test_infinite_loop:
test_infinite_loop:
test_infinite_loop_0:
   0: 9 0 0 _              // [fp + 0] = 0
test_infinite_loop_1:
   1: 4 0 0 3              // [fp + 3] = [fp + 0] + 0
   2: 4 3 1 0              // [fp + 0] = [fp + 3] op 1
   3: 5 0 10 2             // [fp + 2] = [fp + 0] op 10
   4: 14 2 5 _             // if [fp + 2] != 0 jmp rel test_infinite_loop_4
   5: 12 8 _ _             // jump abs test_infinite_loop_3
test_infinite_loop_2:
   6: 4 0 0 -3             // Return value 0: [fp -3] = [fp + 0] + 0
   7: 11 _ _ _             // return
test_infinite_loop_3:
   8: 12 6 _ _             // jump abs test_infinite_loop_2
test_infinite_loop_4:
   9: 12 1 _ _             // jump abs test_infinite_loop_1
