crates/compiler/codegen/tests/snapshots/codegen_auto_discovery__all_fixtures_codegen@control_flow__nested_for_loops.cm.snap
---
source: crates/compiler/codegen/tests/codegen_auto_discovery.rs
description: Codegen snapshot for control_flow/nested_for_loops.cm
input_file: test_data/control_flow/nested_for_loops.cm
---
Fixture: control_flow/nested_for_loops.cm
============================================================
Source code:
fn test_nested_for_loops() -> felt {
    //!ASSERT FUNCTION_COUNT: 1

    let result = 0;

    for (let i = 0; i < 3; i = i + 1) {
        for (let j = 0; j < 4; j = j + 1) {
            result = result + 1;
        }
    }

    return result;
}
============================================================
Result: SEMANTIC ERRORS
Semantic errors found:
DiagnosticCollection {
    diagnostics: [
        Diagnostic {
            severity: Error,
            code: TypeMismatch,
            message: "Operator `<` is not supported for type `felt`",
            file_path: "control_flow/nested_for_loops.cm",
            span: 111..112,
            related_spans: [],
        },
        Diagnostic {
            severity: Error,
            code: TypeMismatch,
            message: "Operator `<` is not supported for type `felt`",
            file_path: "control_flow/nested_for_loops.cm",
            span: 155..156,
            related_spans: [],
        },
    ],
}
