crates/compiler/codegen/tests/snapshots/codegen_auto_discovery__all_fixtures_codegen@control_flow__nested_if.cm.snap
---
source: crates/compiler/codegen/tests/codegen_auto_discovery.rs
description: Codegen snapshot for control_flow/nested_if.cm
input_file: test_data/control_flow/nested_if.cm
---
Fixture: control_flow/nested_if.cm
============================================================
Source code:
//!ASSERT BLOCK_COUNT(test): 5 // entry, outer_then, inner_then, inner_merge, outer_merge

// Tests nested if statements to ensure CFG is built correctly.
fn test(a: felt, b: felt) -> felt {
    let result = 0;
    if (a == 1) {
        if (b == 2) {
            result = 100;
        }
        result = result + 1;
    }
    return result;
}

============================================================
Generated CASM:
test:
   0: 9 0 0 _              // [fp + 0] = 0
   1: 5 -5 1 2             // [fp + 2] = [fp + -5] op 1
   2: 14 2 4 _             // if [fp + 2] != 0 jmp rel test_2
test_1:
   3: 5 -4 2 3             // [fp + 3] = [fp + -4] op 2
   4: 14 3 5 _             // if [fp + 3] != 0 jmp rel test_4
   5: 12 8 _ _             // jump abs test_3
test_2:
   6: 4 0 0 -3             // Return value 0: [fp -3] = [fp + 0] + 0
   7: 11 _ _ _             // return
test_3:
   8: 9 100 0 _            // Store immediate: [fp + 0] = 100
test_4:
   9: 4 0 0 4              // [fp + 4] = [fp + 0] + 0
  10: 4 4 1 0              // [fp + 0] = [fp + 4] op 1
  11: 12 6 _ _             // jump abs test_2
