crates/compiler/codegen/tests/snapshots/codegen_auto_discovery__all_fixtures_codegen@control_flow__simple_for.cm.snap
---
source: crates/compiler/codegen/tests/codegen_auto_discovery.rs
description: Codegen snapshot for control_flow/simple_for.cm
input_file: test_data/control_flow/simple_for.cm
---
Fixture: control_flow/simple_for.cm
============================================================
Source code:
fn test_simple_for() -> felt {
    //!ASSERT FUNCTION_COUNT: 1

    let sum = 0;

    for (let i = 0; i != 10; i = i + 1) {
        sum = sum + i;
    }

    return sum;
}
============================================================
Generated CASM:
test_simple_for:
test_simple_for:
test_simple_for_0:
   0: 9 0 0 _              // [fp + 0] = 0
   1: 9 0 1 _              // [fp + 1] = 0
test_simple_for_1:
   2: 5 1 10 4             // [fp + 4] = [fp + 1] op 10
   3: 14 4 2 _             // if [fp + 4] != 0 jmp rel test_simple_for_2
   4: 12 10 _ _            // jump abs test_simple_for_4
test_simple_for_2:
   5: 4 0 0 5              // [fp + 5] = [fp + 0] + 0
   6: 0 5 1 0              // [fp + 0] = [fp + 5] op [fp + 1]
test_simple_for_3:
   7: 4 1 0 5              // [fp + 5] = [fp + 1] + 0
   8: 4 5 1 1              // [fp + 1] = [fp + 5] op 1
   9: 12 2 _ _             // jump abs test_simple_for_1
test_simple_for_4:
  10: 4 0 0 -3             // Return value 0: [fp -3] = [fp + 0] + 0
  11: 11 _ _ _             // return
