crates/compiler/codegen/tests/snapshots/codegen_auto_discovery__all_fixtures_codegen@control_flow__simple_if.cm.snap
---
source: crates/compiler/codegen/tests/codegen_auto_discovery.rs
description: Codegen snapshot for control_flow/simple_if.cm
input_file: test_data/control_flow/simple_if.cm
---
Fixture: control_flow/simple_if.cm
============================================================
Source code:
fn test_if(x: felt) -> felt {
    if (x == 0) {
        return 1;
    }
    return 2;
}

============================================================
Generated CASM:
test_if:
test_if:
test_if_0:
   0: 14 -4 4 _            // if [fp + -4] != 0 jmp rel test_if_2
   1: 12 2 _ _             // jump abs test_if_1
test_if_1:
   2: 9 1 -3 _             // Return value 0: [fp -3] = 1
   3: 11 _ _ _             // return
test_if_2:
   4: 9 2 -3 _             // Return value 0: [fp -3] = 2
   5: 11 _ _ _             // return
